--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -4,10 +4,8 @@
 
 <div class="row">
   <div class="col s12 center-align">
-    <a
-      href="{{ url_for('add_category') }}"
-      class="btn-large light-blue darken-2"
-      >Add Category <i class="fas fa-plus-square right"></i>
+    <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2">Add Category <i
+        class="fas fa-plus-square right"></i>
     </a>
   </div>
 </div>
@@ -18,11 +16,11 @@
     <div class="card light-blue darken-4 center-align">
       <div class="card-content white-text">
         <span class="card-title">{{ category.category_name }}</span>
-       
+
       </div>
       <div class="card-action">
         <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-        <a href="{{ url_for('delete_category', category_id=category.id)}}" class="btn red accent-4" >Delete</a>
+        <a href="{{ url_for('delete_category', category_id=category.id)}}" class="btn red accent-4">Delete</a>
       </div>
     </div>
   </div>
